@startuml UI

left to right direction
skinparam nodesep 30
skinparam ranksep 150
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

together {
    class ErrorUi
    class CategoryUi
    class DeadlineUi
}


together {
    class EventUi
    class TaskUi
    class LimitUi
    class CommandHelp
}

class GeneralUi
ErrorUi -[hidden]- GeneralUi
GeneralUi -[hidden]- EventUi

ErrorUi     ..> GeneralUi
CategoryUi  ..> GeneralUi
DeadlineUi  ..> GeneralUi
EventUi     ..> GeneralUi
TaskUi      ..> GeneralUi
LimitUi     ..> GeneralUi

@enduml